@@ -2,7 +2,7 @@
 #include "../CFTesting.h"
 
 #define ARRAY_SIZE 5
-const CFIndex array[ARRAY_SIZE] = { 1, 2, 3, 4, 5 };
+const CFIndex array[ARRAY_SIZE] = { 5, 2, 1, 4, 3 };
 
 int main (void)
 {
@@ -15,7 +15,7 @@ int main (void)
   n = CFArrayGetCount (a);
   PASS(n == ARRAY_SIZE, "CFArray has correct number of values.");
   n = (CFIndex)CFArrayGetCountOfValue (a, CFRangeMake(0, ARRAY_SIZE), (const void*)3);
-  PASS(n == 1, "Found 1 occurence of the value.");
+  PASS(n == 1, "Found 1 occurence of the %d.", n);
   
   n = (CFIndex)CFArrayGetValueAtIndex (a, 1);
   PASS(n == 2, "Found value.");
